-Fixed checkbox caption  vertical align problem.
svn changeset:480 branch:toolkit

--- a/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
+++ b/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
@@ -188,6 +188,13 @@ IMG.overlay {
 	
 }
 
+.button .nobr {
+	white-space: nowrap;
+}
+.button .nobr input {
+	float:left;
+}
+
 /* DateField */
 .itmtk .datefield .btn {
 	background-color: ButtonFace;
