--- a/WebContent/WEB-INF/lib/themes/demo/featurebrowser/featurebrowser.css
+++ b/WebContent/WEB-INF/lib/themes/demo/featurebrowser/featurebrowser.css
@@ -1,4 +1,6 @@
 
+/* Feature browser styles */
+
 .itmtk .tree-menu .content, 
 .itmtk .tree-menu .content .node, 
 .itmtk .tree-menu .content .nodes, 
@@ -7,3 +9,38 @@
 	border: 0;
 }
 
+#featurebrowser-properties {
+	width: 0px;
+	background: #f5f5f5;
+}
+
+#featurebrowser-divider {
+	background-image: url(img/tab_handle.png);
+}
+
+#featurebrowser-mainlayout {
+	position: absolute;
+	overflow: hidden;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: white;
+	background-image: url(img/m_bg.png);
+	background-repeat: no-repeat;
+}
+
+#featurebrowser-tabs {
+	background: white;
+}
+
+#featurebrowser-properties-toggler {
+	position: absolute; 
+	top: 15px;
+}
+
+#featurebrowser-features {
+	position: absolute;
+	overflow: auto;
+	left: 0;
+}
