--- a/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
+++ b/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
@@ -304,7 +304,7 @@ IMG.overlay {
 }
 
 .itmtk .table .colsel {
-	display:absolute;
+	position:absolute;
 	width: 10px;
 	height: 14px;
 	height: 0.4em;
