made colsel visible in base theme, fixes #372
svn changeset:612 branch:toolkit

--- a/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
+++ b/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
@@ -432,6 +432,11 @@ IMG.overlay {
 	background: url('../img/table/desc.gif') right top no-repeat;
 }
 
+.itmtk .table .popup {
+	width:110px;
+	overflow: visible;	
+}
+
 /* Paging table */
 
 .itmtk .table-paging {
