DIV Window: shadow styles, damn IE6 still need alphachannel hack or overridden styles
svn changeset:825 branch:trunk

--- a/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
+++ b/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
@@ -907,3 +907,8 @@ IMG.overlay {
 	background: url('../img/window/resizer_bg.png') no-repeat;
 	cursor: SE-resize;
 }
+.itmtk .window .shadow {
+	position:absolute;	
+	background: #aaa;
+}
+
