DIV window: hopefully the last fix for mac FF scrollbar issues
svn changeset:990 branch:trunk

--- a/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
+++ b/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
@@ -374,6 +374,9 @@ IMG.overlay {
 	padding-right:0px;
 	margin-right:12px;
 }
+.itmtk .table .cout {
+	overflow:scroll;
+}
 
 .itmtk .table .cout table.cin {
 	margin:0;
